--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -5,8 +5,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 400px;
-  /* width: 90%; */
+  /* width: 400px; */
+  max-width: 400px;
+  width: 80%;
   z-index: 200;
   transform: translateX(-100%);
   transition: transform 0.5s ease-out;
