--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,5 +1,7 @@
 .home {
-	/* padding: 56px 20px; */
-	min-height: 100%;
-	width: 100%;
+  height: 100%;
+  padding: 100px 30px 0;
+  margin: 0;
+  width: 100%;
+ 
 }
