--- a/src/routes/profile/style.css
+++ b/src/routes/profile/style.css
@@ -1,5 +1,8 @@
 .profile {
-	/* padding: 56px 20px; */
-	/* min-height: 100%; */
+	height: 100%;
+	padding: 100px 30px 0;
+	margin: 0;
 	width: 100%;
-}
+   
+  }
+  
