--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,7 +1,136 @@
 .home {
   height: 100%;
-  padding: 100px 30px 0;
-  margin: 0;
   width: 100%;
- 
+  padding: 100px 0 0;
+  margin: 0;
+}
+
+.home .avatar {
+  display: block;
+  max-width: 15rem;
+  margin: 0 auto;
+  border-radius: 50%;
+  /* height: ; */
+  border: 1.5px solid rgba(52, 130, 231, 0.24);
+}
+
+.greeting {
+  opacity: 0.7;
+  margin: 0 auto;
+  padding: 0 2rem;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.sub {
+  font-size: 1.5rem;
+  opacity: 0.5;
+}
+
+.home .content {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto 0 auto;
+}
+
+.home p {
+  padding: 3rem;
+  font-size: 1.2rem;
+  text-align: justify;
+}
+
+.home .icon-div {
+  width: 8rem;
+  height: 8rem;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.home .icon-div img {
+  display: block;
+  margin: auto;
+  height: 8rem;
+}
+
+.home .icon-div.globe,
+.home .icon-div.globe img {
+  width: 9rem;
+  height: 9rem;
+}
+
+.home .monterail-logo {
+  margin: 0 auto 3rem auto;
+  /* margin-bottom: 3rem; */
+}
+
+.home .monterail-logo img {
+  margin: 0 auto;
+}
+
+@media (min-width: 700px) {
+  .home .content {
+    max-width: 750px;
+    margin: 3rem auto 0 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 2rem;
+  }
+
+  .home .content > * {
+    flex: 0 1 60%;
+  }
+
+  .home .content > *:nth-child(2n) {
+    flex: 0 1 40%;
+  }
+
+  .home .icon-div {
+    margin-bottom: 5rem;
+  }
+
+  .home p {
+    padding: 0;
+    /* font-size: 1.2rem; */
+    /* text-align: justify; */
+    margin-bottom: 5rem;
+  }
+
+  .home .p1 {
+    order: 1;
+  }
+  .home .p2 {
+    order: 4;
+  }
+  .home .p3 {
+    order: 5;
+  }
+  .home .p4 {
+    order: 8;
+  }
+  .home .content .p5 {
+    order: 9;
+    flex: 1 0 100%;
+  }
+
+  .home .icon1 {
+    order: 2;
+  }
+
+  .home .icon2 {
+    order: 3;
+  }
+
+  .home .icon3 {
+    order: 6;
+  }
+
+  .home .icon4 {
+    order: 7;
+  }
+
+  .home .content .icon5 {
+    order: 10;
+    flex: 1 0 100%;
+  }
 }
