--- a/src/routes/profile/style.css
+++ b/src/routes/profile/style.css
@@ -15,6 +15,7 @@ p.top-section__title {
   opacity: 0.7;
   text-align: center;
   font-size: 2rem;
+  padding-top: 10px;
 }
 
 p.top-section__subtitle {
