--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,9 @@
 
 html,
 body {
-  font-family: sans-serif;
-  height: 100%;
-  width: 100%;
+  font-family: "Noto Sans CJK JP Regular", Arial, sans-serif;
+  height: 100%; 
+    width: 100%;
 }
 
 #app {
