--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-  font-family: "Noto Sans CJK JP Regular", Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   height: 100%; 
     width: 100%;
 }
